removed modal overflow bug
removed bottom positioning

--- a/employee_directory_v1/css/styles.css
+++ b/employee_directory_v1/css/styles.css
@@ -129,7 +129,6 @@ input:focus {
   left:25%;
   right: 25%;
   top:25%;
-  bottom: 25%;
   position: fixed;
   text-align: center;
   background: #fff;
